@@ -1,6 +1,7 @@
 1.14.1 /
 [Alexandr Topilski]
 - CONFIG GET databases different behavior than in Redis
+- Runtime SSH password
 
 1.14.0 / January 10, 2018
 [Alexandr Topilski]
