@@ -101,6 +101,7 @@ const QString trName = QObject::tr("Name");
 const QString trNumberOfSubscribers = QObject::tr("Number of subscribers");
 const QString trAddress = QObject::tr("Address");
 const QString trPassword = QObject::tr("Password");
+const QString trAskPassword = QObject::tr("Ask password");
 const QString trTrial = QObject::tr("Trial");
 const QString trLogin = QObject::tr("Login");
 const QString trHide = QObject::tr("Hide");
