@@ -1,6 +1,7 @@
 1.15.1 /
 [Alexandr Topilski]
 - CONFIG GET databases
+- Runtime SSH password
 
 1.15.0 / January 10, 2018
 [Alexandr Topilski]
